DCN-136 - Update to provide full image URL in the value, add download button, add option to preconfigure bynder URL

--- a/bynder-selector.less
+++ b/bynder-selector.less
@@ -88,8 +88,12 @@ body {
 
 			&:hover {
 				color: #fff;
-				background-color: #ef5350;
+				background-color: #2196f3;
 			}
+		}
+
+		.action.remove i:hover {
+			background-color: #ef5350;
 		}
 	}
 
