--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,21 @@
-div.selector {
-  padding: 10px;
+.selector {
+    padding: 10px;
 }
 
-div.asset-thumbnail {
+.asset-thumbnail {
     position: relative;
     width: 280px;
     height: 224px;
     cursor: pointer;
     background-color: #eef3fc;
     border-radius: 8px;
-    transition: all .15s cubic-bezier(.23,1,.32,1) 0ms;
+    transition: all .15s cubic-bezier(.23, 1, .32, 1) 0ms;
     box-shadow: 0 0 8px 0 rgb(0 0 0 / 3%), 0 8px 14px 0 rgb(16 33 60 / 8%);
     overflow: hidden;
-    float: right;
     margin: 10px;
 }
 
-div.asset-preview {
+.asset-preview {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -25,12 +24,12 @@ div.asset-preview {
     height: 220px;
 }
 
-img.asset-thumbnail__image {
-  max-width: 100%;
-  max-height: 100%;
+.asset-thumbnail__image {
+    max-width: 100%;
+    max-height: 100%;
 }
 
-div.asset-thumbnail__actions-pane {
+.asset-thumbnail__actions-pane {
     position: absolute;
     top: 0;
     z-index: 1;
@@ -40,12 +39,12 @@ div.asset-thumbnail__actions-pane {
     width: 100%;
     height: 44px;
     cursor: default;
-    background-color: hsla(0,0%,100%,.9);
+    background-color: hsla(0, 0%, 100%, .9);
     border-radius: 9px 9px 0 0;
     overflow: hidden;
 }
 
-div.asset-thumbnail__bottom {
+.asset-thumbnail__bottom {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -53,32 +52,46 @@ div.asset-thumbnail__bottom {
     width: 100%;
     color: #151515;
     background-color: #fff;
-    transition: all .15s cubic-bezier(.23,1,.32,1) 0ms;
+    transition: all .15s cubic-bezier(.23, 1, .32, 1) 0ms;
     border-radius: 0 0 8px 8px;
     padding: 16px 24px;
 }
 
-div.selected {
-  display: inline-block;
+.selected {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-
-a.remove:hover {
-  background-color: #b10202;
-  color: #fff;
+.asset-action:hover {
+    background-color: rgba(21, 21, 21, 0.1);
+    text-decoration: none;
 }
 
-a.action:hover {
-  background-color: #afc5e9 !important;
+.asset-action--remove:hover {
+    background-color: #b10202;
+    color: #fff;
 }
 
-a.action, a.remove { 
-    transition: all .15s cubic-bezier(.23,1,.32,1) 0s;
+.asset-action--remove {
+    border: none;
+    background-color: transparent;
+}
+
+.asset-action {
+    transition: all .15s cubic-bezier(.23, 1, .32, 1) 0s;
     margin-right: 8px;
     border-radius: 4px;
     padding: 4px;
     font-size: 16px;
     color: #151515;
     cursor: pointer;
-    border-radius: 4px;
+    text-decoration: none;
+}
+
+.asset-action:last-child {
+    margin-right: 12px;
+}
+
+.asset-action > i {
+    display: block;
 }
